releases/1.15.1/docs/cpp/_sources/api/program_listing_file_cppdocs_generated_include_slint_string_internal.h.rst.txt

.. _program_listing_file_cppdocs_generated_include_slint_string_internal.h:

Program Listing for File slint_string_internal.h
================================================

|exhale_lsh| :ref:`Return to documentation for file <file_cppdocs_generated_include_slint_string_internal.h>` (``cppdocs/generated_include/slint_string_internal.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   #pragma once
   
   /* Generated with cbindgen:0.29.2 */
   
   #include <cstdarg>
   #include <cstdint>
   #include <cstdlib>
   #include <ostream>
   #include <new>
   namespace slint { struct SharedString; namespace private_api { struct StyledText; } namespace cbindgen_private { using private_api::StyledText; }}
   
   namespace slint {
   namespace cbindgen_private {
   
   template<typename T>
   struct Slice {
       T *ptr;
       uintptr_t len;
       const T &operator[](int i) const { return ptr[i]; }
   };
   
   extern "C" {
   
   const char *slint_shared_string_bytes(const SharedString *ss);
   
   void slint_shared_string_drop(const SharedString *ss);
   
   void slint_shared_string_clone(SharedString *out, const SharedString *ss);
   
   void slint_shared_string_from_bytes(SharedString *out, const char *bytes, uintptr_t len);
   
   void slint_shared_string_from_number(SharedString *out, double n);
   
   void slint_shared_string_from_number_fixed(SharedString *out, double n, uintptr_t digits);
   
   void slint_shared_string_from_number_precision(SharedString *out, double n, uintptr_t precision);
   
   void slint_shared_string_append(SharedString *self_, const char *bytes, uintptr_t len);
   
   void slint_shared_string_to_lowercase(SharedString *out, const SharedString *ss);
   
   void slint_shared_string_to_uppercase(SharedString *out, const SharedString *ss);
   
   void slint_styled_text_new(StyledText *out);
   
   void slint_styled_text_drop(const StyledText *text);
   
   bool slint_styled_text_eq(const StyledText *a, const StyledText *b);
   
   void slint_styled_text_clone(StyledText *out, const StyledText *ss);
   
   }  // extern "C"
   
   }  // namespace cbindgen_private
   }  // namespace slint
